# lyrics_tgbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
lyrics_tgbot/: answers.py  bot.py  genius.py
tests/: test_lyrics_tgbot.py
