[tool.poetry]
name = "lyrics-tgbot"
version = "0.1.0"
description = ""
authors = ["Fanraeen <fanraeen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.18"
requests = "^2.27.0"
bs4 = "^0.0.1"
gunicorn = "^20.1.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
